WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86657
[BlackBerry] The FCC shows up on an empty input field
https://bugs.webkit.org/show_bug.cgi?id=86657
Summary
[BlackBerry] The FCC shows up on an empty input field
Yongxin Dai
Reported
2012-05-16 10:59:54 PDT
The FCC shows up when the user taps an empty input field, which is unnecessary.
Attachments
Patch
(2.13 KB, patch)
2012-05-16 11:32 PDT
,
Yongxin Dai
no flags
Details
Formatted Diff
Diff
Patch
(2.13 KB, patch)
2012-05-16 13:30 PDT
,
Yongxin Dai
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Yongxin Dai
Comment 1
2012-05-16 11:32:31 PDT
Created
attachment 142309
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-16 13:20:57 PDT
Comment on
attachment 142309
[details]
Patch Rejecting
attachment 142309
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Antonio Comes found in /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog does not appear to be a valid reviewer according to committers.py. ERROR: /mnt/git/webkit-commit-queue/Source/WebKit/blackberry/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12722242
Yongxin Dai
Comment 3
2012-05-16 13:30:55 PDT
Created
attachment 142333
[details]
Patch
WebKit Review Bot
Comment 4
2012-05-16 15:15:28 PDT
Comment on
attachment 142333
[details]
Patch Clearing flags on attachment: 142333 Committed
r117352
: <
http://trac.webkit.org/changeset/117352
>
WebKit Review Bot
Comment 5
2012-05-16 15:15:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug