[BlackBerry] The FCC shows up on an empty input field https://bugs.webkit.org/show_bug.cgi?id=86657

Patch by Yongxin Dai <yodai@rim.com> on 2012-05-16
Reviewed by Antonio Gomes.

Turn off the caret by sending a caret changed notification with empty caret.
PR #120620

Reviewed Internally by Mike Fenton.

* WebKitSupport/SelectionHandler.cpp:
(BlackBerry::WebKit::SelectionHandler::caretPositionChanged):

Canonical link: https://commits.webkit.org/104266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117352 268f45cc-cd09-0410-ab3c-d52691b4dbfc